force-app/main/default/objects/MUSW__RESTSettingFields_Pull__c/MUSW__RESTSettingFields_Pull__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Specifies field mappings for REST services defined in REST Settings (pull requests)</description>
    <label>REST Setting Fields - Pull</label>
</CustomObject>