force-app/main/default/objects/MUSW__RESTSettingFields_Pull__c/fields/MUSW__isId__c.field-meta.xml
<CustomField>
    <fullName>MUSW__isId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unique Identifier</label>
    <type>Checkbox</type>
</CustomField>