force-app/main/default/objects/MUSW__RESTSettingFields_Pull__c/fields/MUSW__Mapped_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Mapped_Object_Name__c</fullName>
    <label>Mapped Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>