force-app/main/default/objects/MUSW__RESTSettingFields_Pull__c/fields/MUSW__REST_Setting_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__REST_Setting_Name__c</fullName>
    <label>REST Setting Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>