force-app/main/default/objects/MUSW__RESTSettingFields_Pull__c/fields/MUSW__Transform_Instructions__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Transform_Instructions__c</fullName>
    <label>Transform Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>