force-app/main/default/objects/MUSW__RESTSettingFields_Pull__c/fields/MUSW__Traverse_Instructions__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Traverse_Instructions__c</fullName>
    <label>Traverse Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>